fixed overflowing elemts for tablet view

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,9 +1,21 @@
 @import '../../../assets/variables.scss';
 
+@media only screen and (max-width: $maxWidth) {
+    .hero-container{
+        overflow: hidden;
+        .hero #video{
+            
+            max-width: 50%;
+            border:2px solid black;
+        }
+    }
+}
+
 .hero-container {
     background-color: $purpleGlobal;
+
     .hero {
-        margin:auto;
+        margin: auto;
         color: white;
         display: flex;
         flex-direction: row;
@@ -21,7 +33,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
- 
+            // min-width: $maxWidth/2;
             &>p {
                 margin-top: -10%;
             }
@@ -45,9 +57,10 @@
             }
 
             #buttons {
-                margin-top:-5%;
+                margin-top: -5%;
+                max-width: $maxWidth / 2;
                 width: 79%;
-                height: 4em;
+                // min-height: 4em;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
@@ -59,10 +72,13 @@
                     overflow: hidden;
                     border-radius: 4px;
                     width: 49%;
-                    height: 100%;
+                    min-width: $maxWidth/6;
+                    // min-width: 6em;
+                    height: 4em;
                     // text-align: center;
                     display: flex;
                     align-items: center;
+                    flex-wrap: wrap;
                     justify-content: space-around;
 
                     a {
@@ -99,7 +115,6 @@
                         }
                     }
                 }
-
 
                 #sign-up-with-email {}
             }
